修改图片路径到assets

--- a/src/assets/main_icon.scss
+++ b/src/assets/main_icon.scss
@@ -2,6 +2,6 @@
 	background-image: url('images/#{$url}@2x.png');
 }
 @mixin bg-img2($url) {
-	background-image: url('../../static/images/#{$url}@2x.png');
+	background-image: url('../assets/images/#{$url}@2x.png');
 }
 
